--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash": "^4.17.4",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-router": "^4.0.0"
   }
 }
