--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "core-js": "^2.0.0",
     "d3": "^3.5.16",
     "lodash": "^4.17.4",
