--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "d3": "^3.5.16",
     "lodash": "^4.17.4",
     "normalize.css": "^4.0.0",
+    "prismjs": "^1.6.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-router": "^3.0.2"
