--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,6 @@
   ],
   "ignore": [
     "./src/components/v3.lesson/d3.js",
-    "./src/components/v3.20days/d3.js"
+    "./src/components/20days/d3.js"
   ]
 }
