--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
@@ -64,11 +65,14 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "antd": "^2.9.3",
     "classnames": "^2.2.5",
     "core-js": "^2.0.0",
     "d3": "^4.7.4",
     "d3-selection-multi": "^1.0.1",
     "lodash": "^4.17.4",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "normalize.css": "^4.0.0",
     "prismjs": "^1.6.0",
     "react": "^15.0.0",
